gyhtTAG: vega_ensemblseqload-4-3-1-9
DATE: 01/22/2009
STAFF: sc
CHANGES:
1) Update curation logging, updated specific config files
  with proper RELEASE_NO

TAG: vega_ensemblseqload-4-3-1-8
DATE: 01/20/2009
STAFF: sc
CHANGES: 
1) *seqload.config - updated to use /data/downloads symlinks
2) vega_seqload.config - updated filename as they changed at vega

TAG: vega_ensemblseqload-4-3-1-7
DATE: 12/14/2009
STAFF: sc
CHANGES: ensembl seq config files: corrected SEQ_RELEASE_NUM to v56

TAG: vega_ensemblseqload-4-3-1-6
DATE: 12/08/2009
STAFF: sc
CHANGES: I realized that the associatins were only getting redone
  when reloading sequences, thus the following changes:
1) vega_ensemblseqload.sh - added processing of second parameter
   a boolean indicating to load sequences and assocs when true, 
   only assocs when false
2) VegaEnsemblSeqloadCfg - added boolean getLoadSeqs()
3) VegaEnsemblSeqloader - added checking for boolean and processing 
   accordingly.
TAG: vega_ensemblseqload-4-3-1-5
TAG: vega_ensemblseqload-4-3-1-4
TAG: vega_ensemblseqload-4-3-1-3
TAG: vega_ensemblseqload-4-3-1-2
DATE: 12/01/2009
STAFF: sc
CHANGES: Added ./bin/run_assocload, corrected input file in vega cdna config

TAG: vega_ensemblseqload-4-3-1-1
DATE: 11/30/2009
STAFF: sc
CHANGES: TR9774 initial tag
