@@ -49,16 +49,16 @@ INFILE_NAME=STDIN
 INPUTDIR=${DATADOWNLOADS}/ensembl_mus_protein
 
 # Input file name - must be updated with each load
-APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.53.pep.all.fa.gz
+APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.56.pep.all.fa.gz
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/ensembl_proteinassocload.config
 
 # Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_proteinassoc.txt
+INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_proteinmkrassoc.txt
 
-export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 
+export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD 
 #
 # Ensembl Protein Sequence Load specific settings
 #
@@ -108,6 +108,21 @@ ASSOC_JNUMBER=J:91388
 ASSOC_OBJECTTYPE=Marker
 
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
+
+#
+# Ensembl Protein Sequence to Transcript Association Load settings
+#
+
+# Path to the seqseq_assocload input file
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembl_proteinseqassoc.txt
+
+# Sequence Association Qualifier term
+QUALIFIER="translated from "
+
+# 0-based position of the transcript in the description line of the input file
+SEQ_POSITION=4
+
+export INFILE_SEQASSOCLOAD QUALIFIER SEQ_POSITION
 
 #  The name of the load for the subject of an email notification
 MAIL_LOADNAME="Ensembl Protein Sequence Load"
