@@ -49,13 +49,13 @@ INFILE_NAME=STDIN
 INPUTDIR=${DATADOWNLOADS}/ensembl_mus_cdna
 
 # Input file name - must be updated with each load
-APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.53.cdna.all.fa.gz
+APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.56.cdna.all.fa.gz
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/ensembl_transcriptassocload.config
 
 # Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_transcriptassoc.txt
+INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_transcriptmkrassoc.txt
 
 export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 
@@ -108,6 +108,21 @@ ASSOC_JNUMBER=J:91388
 ASSOC_OBJECTTYPE=Marker
 
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
+
+#
+# Ensembl Transcript Sequence to Transcript Association Load settings
+#
+
+# Path to the seqseq_assocload input file
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembl_transcriptseqassoc.txt
+
+# Sequence Association Qualifier term
+QUALIFIER="transcribed from "
+
+# 0-based position of the transcript in the description line of the input file
+SEQ_POSITION=3
+
+export INFILE_SEQASSOCLOAD QUALIFIER SEQ_POSITION
 
 #  The name of the load for the subject of an email notification
 MAIL_LOADNAME="Ensembl Transcript Sequence Load"
