@@ -22,7 +22,7 @@ RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 
 #  Complete path name of the input file
-INFILE_NAME=${DATALOADSOUTPUT}/vega/vega_proteinseqload/output/vega_proteinassoc.txt
+INFILE_NAME=${DATALOADSOUTPUT}/vega/vega_proteinseqload/output/vega_proteinmkrassoc.txt
 
 #  Set the size of the memory buffer used when reading an input file
 INFILE_BUFFERSIZE=21000000
