@@ -22,7 +22,7 @@ RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 
 #  Complete path name of the input file
-INFILE_NAME=${DATALOADSOUTPUT}/vega/vega_transcriptseqload/output/vega_transcriptassoc.txt
+INFILE_NAME=${DATALOADSOUTPUT}/vega/vega_transcriptseqload/output/vega_transcriptmkrassoc.txt
 
 #  Set the size of the memory buffer used when reading an input file
 INFILE_BUFFERSIZE=21000000
