@@ -55,7 +55,7 @@ APP_INFILES=${INPUTDIR}/Mus_musculus.VEGA37.37.cdna.all.fa.gz
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/vega_transcriptassocload.config
 
 # Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/vega_transcriptassoc.txt
+INFILE_ASSOCLOAD=${OUTPUTDIR}/vega_transcriptmkrassoc.txt
 
 export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 
@@ -108,6 +108,21 @@ ASSOC_JNUMBER=J:109762
 ASSOC_OBJECTTYPE=Marker
 
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
+
+#
+# VEGA Transcript Sequence to Transcript Association Load settings
+#
+
+# Path to the seqseq_assocload input file
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vega_transcriptseqassoc.txt
+
+# Sequence Association Qualifier term
+QUALIFIER="transcribed from "
+
+# 0-based position of the transcript in the description line of the input file
+SEQ_POSITION=3
+
+export INFILE_SEQASSOCLOAD QUALIFIER SEQ_POSITION
 
 #  The name of the load for the subject of an email notification
 MAIL_LOADNAME="VEGA Transcript Sequence Load"
